fix: grid alignment at max breakpoint (#1181)
* fix: grid alignment at max breakpoint

* fix: update to 424px because math

* fix: grid at large xlg breakpoint

--- a/packages/gatsby-theme-carbon/src/components/Code/Code.module.scss
+++ b/packages/gatsby-theme-carbon/src/components/Code/Code.module.scss
@@ -36,7 +36,7 @@
   @include carbon--type-style('code-02');
   width: calc(100% + 2rem);
   @include carbon--breakpoint('lg') {
-    width: calc(67% + 1rem);
+    width: calc(67% + 1.15rem);
   }
 }
 
